# simple-sfml-project-setup-cmake

./: CMakeLists.txt  README.md  main.cpp
